close sqlite connect object & fixed ke.sh